<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/ThemeOverlay.AppCompat.Menu">

    <Button
        android:id="@+id/button"
        android:onClick="openLikvidCalcMenu"
        android:text="@string/main_menu_button1"
        app:layout_marginLeftPercent="2%"
        app:layout_marginRightPercent="1%"
        app:layout_marginTopPercent="5%"
        tools:ignore="NotSibling" />

    <Button
        android:id="@+id/button1"
        android:layout_alignTop="@+id/button"
        android:layout_toEndOf="@id/button"
        android:text="@string/main_menu_button2"
        app:layout_marginLeftPercent="1%"
        app:layout_marginRightPercent="2%" />

    <Button
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:text="@string/main_menu_button3" />

    <Button
        android:id="@+id/button3"
        android:layout_below="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:text="@string/main_menu_button4" />

    <Button
        android:id="@+id/button4"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:text="@string/main_menu_button5"
        app:layout_marginRightPercent="2%"
        app:layout_widthPercent="96%" />

</androidx.percentlayout.widget.PercentRelativeLayout>